fixed spacing

--- a/uqcs_shirts/static/style.css
+++ b/uqcs_shirts/static/style.css
@@ -14,5 +14,5 @@ body {
 }
 
 .stripe {
-	margin-left: 20px;
+	margin-left: 30px;
 }
